--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,11 +6,21 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./*"],
+      "@assets": ["./assets"],
+      "@assets/*": ["./assets/*"],
+      "@components": ["./components"],
+      "@components/*": ["./components/*"],
+      "@features/*": ["./features/*"],
+      "@hooks": ["./hooks"],
+      "@layouts": ["./layouts"],
+      "@pages/*": ["./pages/*"],
+      "@types/*": ["./types/*"],
+      "@utils": ["./utils"],
+      "@utils/*": ["./utils/*"],
+      "@store": ["./store"]
     },
     /* Bundler mode */
     "moduleResolution": "Bundler",
